--- a/etp/src/app/pages/home/home.component.html
+++ b/etp/src/app/pages/home/home.component.html
@@ -1,1 +1,55 @@
-<p>home works!</p>
+<div class="home-wrapper">
+  <svg
+    version="1.1"
+    xmlns="http://www.w3.org/2000/svg"
+    xmlns:xlink="http://www.w3.org/1999/xlink"
+    x="0px"
+    y="0px"
+    width="41%"
+    height="100%"
+    style="overflow: visible; position: absolute; right: 0; top: 0;"
+    xml:space="preserve"
+  >
+    <style type="text/css">
+      .st0 {
+        fill: #2f3b52;
+        stroke-width: 0.75;
+        stroke-miterlimit: 10;
+      }
+    </style>
+    <defs></defs>
+    <path
+      class="st0"
+      d="M0.59,204.63c1.24,7.1,7.26,11.31,8.57,12.29c12.22,9.14,252.74,215.67,586.72,502.96
+	c0-239.83,0-479.67,0-719.5H176.92C84.35,99.4,17.47,172.61,7.02,186.2C0.09,195.22,0.02,201.36,0.59,204.63z"
+    />
+  </svg>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-7 col-md-6">
+        <div class="heading m-5">
+          <h1 class="title">
+            Welcome to <br />
+            Energy Trading Platform
+          </h1>
+          <p>by solar bankers</p>
+          <div style="width: 120px; height: 100px; margin-top: 5px;">
+            <img
+              src="https://solarbankers.org/static/logo.png"
+              alt="solar bankers"
+              class="img-fluid"
+            />
+          </div>
+        </div>
+        <div class="shadow-sm my-5">
+          <div class="line-chart">
+            <img src="/assets/img/Chart.png" alt="charts" class="img-fluid" />
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-5 col-md-6">
+        <div class="container"></div>
+      </div>
+    </div>
+  </div>
+</div>
