--- a/etp/src/styles.scss
+++ b/etp/src/styles.scss
@@ -37,3 +37,38 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+// home styling
+.home-wrapper {
+  background: $big-bg;
+  min-height: 100vh;
+  color: #fff;
+  max-width: 100%;
+  .heading {
+    .title {
+      font-size: 3em;
+      font-weight: 400;
+      line-height: 1;
+      margin: 20% auto 10px;
+    }
+    p {
+      font-size: 16px;
+      color: #aaa;
+      font-weight: 300;
+    }
+  }
+
+  .line-chart {
+    background-color: $bg;
+    border-radius: 5px;
+    padding: 10px;
+    width: 80%;
+  }
+}
+
+@media (max-width: 800px) {
+  .home-wrapper {
+    .line-chart {
+    }
+  }
+}
