--- a/etp/src/styles.scss
+++ b/etp/src/styles.scss
@@ -37,7 +37,13 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
-
+.btn {
+  background-color: $prmary !important;
+  border-radius: 2px !important;
+  font-size: 100% !important;
+  font-weight: 300 !important;
+  color: white !important;
+}
 // home styling
 .home-wrapper {
   background: $big-bg;
@@ -45,11 +51,14 @@ body {
   color: #fff;
   max-width: 100%;
   .heading {
+    margin-left: 20%;
+    margin-top: 17%;
+    padding: 20px 0;
     .title {
-      font-size: 3em;
+      font-size: 4em;
       font-weight: 400;
       line-height: 1;
-      margin: 20% auto 10px;
+      margin-top: 3%;
     }
     p {
       font-size: 16px;
@@ -59,16 +68,55 @@ body {
   }
 
   .line-chart {
-    background-color: $bg;
+    width: 100%;
+    margin-top: 20%;
+    img {
+      background-color: $bg;
+      padding: 10px;
+    }
+  }
+  .top-btn {
+    margin: 20px auto;
+    position: absolute;
+    right: 0;
+    z-index: 1;
+    .span {
+      margin-right: 20px;
+      font-weight: 400;
+      font-size: 150%;
+      sup,
+      sub {
+        color: #70889e;
+        font-weight: 300;
+      }
+    }
+    .btn {
+      height: 2rem;
+      width: 10rem;
+      margin: 5px 10px;
+      line-height: 5px;
+    }
+  }
+  .bar-pic {
+    width: 45%;
+    margin-top: 15%;
+  }
+  img {
     border-radius: 5px;
-    padding: 10px;
-    width: 80%;
   }
 }
 
 @media (max-width: 800px) {
   .home-wrapper {
-    .line-chart {
+    padding-left: 10px;
+    margin-left: 0;
+  }
+  .top-btn {
+    position: relative;
+    margin: 0;
+    padding: 10px 5px;
+    .span {
+      margin: auto 2px;
     }
   }
 }
