--- a/etp/src/app/pages/home/home.component.html
+++ b/etp/src/app/pages/home/home.component.html
@@ -42,7 +42,7 @@
               Energy Trading Platform
             </h1>
             <p>by solar bankers</p>
-            <div style="width: 30%; margin: 5px -5% 0;">
+            <div style="width: 20vh; margin: 5px -5% 0;">
               <img
                 src="assets/img/logo.png"
                 alt="solar bankers"
@@ -57,7 +57,7 @@
         </div>
         <div class="line-chart" *ngIf="set.isHandset$ | async">
           <img
-            style="margin: 0 20px;"
+            style="margin: 0 1vw;"
             src="/assets/img/combine.png"
             alt="charts"
             class="img-fluid"
@@ -73,7 +73,7 @@
                 class="img-fluid"
               />
             </div>
-            <div style="width: 100%;">
+            <div style="width: 70vh;">
               <img
                 src="/assets/img/active-hours.png"
                 alt="consumption by day"
