--- a/etp/src/app/auth/authhome/authhome.component.html
+++ b/etp/src/app/auth/authhome/authhome.component.html
@@ -1,11 +1,7 @@
 <div class="row">
   <div
     class="col-lg-7 col-md-5"
-    style="
-      box-shadow: 1px 0 20px #152138d0;
-      overflow-y: hidden !important;
-      position: relative;
-    "
+    style="box-shadow: 1px 0 20px #152138d0;"
     *ngIf="!(set.isHandset$ | async)"
   >
     <div class="auth-side">
@@ -18,14 +14,18 @@
     </div>
   </div>
   <div class="col-lg-5 col-md-7">
-    <div class="auth-logo">
-      <a href="" routerLink="">
-        <img
-          src="/assets/img/mainlogo.png"
-          alt="Solar bankers logo"
-          class="img-fluid"
-      /></a>
+    <div class="container">
+      <div class="auth-logo">
+        <a href="" routerLink="">
+          <img
+            src="/assets/img/mainlogo.png"
+            alt="Solar bankers logo"
+            class="img-fluid"
+        /></a>
+      </div>
+      <div>
+        <router-outlet></router-outlet>
+      </div>
     </div>
-    <router-outlet></router-outlet>
   </div>
 </div>
