--- a/etp/src/app/auth/authhome/authhome.component.scss
+++ b/etp/src/app/auth/authhome/authhome.component.scss
@@ -1,12 +1,13 @@
 .row {
   margin: auto 0 !important;
+  flex-wrap: nowrap;
 }
 .authbox {
   padding: calc(50vh - 7%) calc(70vw - 110%) 0;
   .title {
     color: white;
-    font-size: 35px;
-    line-height: 40px;
+    font-size: 4vh;
+    line-height: 5vh;
     font-weight: bold;
     span {
       font-weight: 300;
