--- a/etp/src/app/auth/signin/signin.component.scss
+++ b/etp/src/app/auth/signin/signin.component.scss
@@ -1,4 +1,11 @@
 .btn {
-  height: 30px !important;
+  height: 4vh !important;
   line-height: 10px;
+}
+p {
+  font-size: 2.3vh;
+}
+
+span {
+  font-size: 2vh;
 }
