--- a/etp/src/styles.scss
+++ b/etp/src/styles.scss
@@ -32,7 +32,9 @@ $textcol: #20293c;
 * {
   outline: none !important;
 }
-
+.container {
+  max-width: calc(100vw - 10%) !important;
+}
 html,
 body {
   height: 100%;
@@ -44,7 +46,7 @@ body {
 .btn {
   background-color: $prmary !important;
   border-radius: 2px !important;
-  font-size: 90% !important;
+  font-size: 1.6vh !important;
   font-weight: 300 !important;
   color: white !important;
   line-height: 5px !important;
@@ -56,26 +58,26 @@ body {
   color: #fff;
   max-width: 100%;
   .heading {
-    margin-left: 20%;
-    margin-top: 15%;
+    margin-left: 5vw;
+    margin-top: 10vh;
     padding: 20px 0;
     .title {
-      font-size: 250%;
+      font-size: 5vh;
       font-weight: 400;
       line-height: 1;
       margin-top: 5%;
       text-shadow: 4px 4px 0px #0c1425, 7px 7px 0px rgba(0, 0, 0, 0.84);
     }
     p {
-      font-size: 16px;
+      font-size: 2vh;
       color: #aaa;
       font-weight: 300;
     }
   }
 
   .line-chart {
-    width: 117%;
-    margin: 5% -10% 0;
+    width: 50vw;
+    margin: 3vh -5vh 0;
     img {
       padding: 10px;
     }
@@ -86,9 +88,9 @@ body {
     right: 0;
     z-index: 1;
     .span {
-      margin-right: 20px;
+      margin-right: 1vw;
       font-weight: 400;
-      font-size: 130%;
+      font-size: 2.5vh;
       sup,
       sub {
         color: #70889e;
@@ -96,22 +98,104 @@ body {
       }
     }
     .btn {
-      height: 1.7rem;
-      width: 8rem;
+      height: 3.5vh;
+      width: 10vw;
       padding: 5px 0px;
       margin: auto 5px;
     }
   }
   .bar-pic {
-    width: 50%;
-    margin-top: 10%;
+    width: 40vh;
+    margin-top: 5vh;
   }
   img {
     border-radius: 5px;
   }
 }
 
+// log in
+
+.auth-side {
+  background-image: url(/assets/img/bitmap.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  box-shadow: inset 0 0 0 2000px #2f3b52e1;
+  // width: 100%;
+  margin: 0 -15px;
+}
+
+.auth-logo {
+  width: 20vh;
+  height: 100px;
+  margin: 10vh auto 5vh;
+  max-height: 100vh;
+}
+
+.wrapper {
+  margin: 10vh auto 20px;
+  .title {
+    font-size: 4vh;
+    font-weight: 400;
+    color: $textcol;
+    text-align: center;
+  }
+}
+.form {
+  display: flex;
+  justify-content: center;
+  margin: 7vh;
+  flex-wrap: wrap;
+  label {
+    font-size: 2vh;
+    font-weight: 500;
+  }
+  input,
+  textarea {
+    background-color: $textcol;
+    caret-color: #1f8efa;
+    color: white !important;
+    &:focus {
+      background-color: $textcol;
+      box-shadow: none;
+    }
+  }
+  input {
+    width: 320px;
+    height: 30px;
+    border-radius: 3px;
+  }
+}
+.forgot {
+  margin: auto 5vh;
+
+  p {
+    cursor: pointer;
+    margin: 5vh 0 0;
+    color: $bg;
+    &:hover {
+      color: $prmary;
+    }
+  }
+}
+.signup {
+  margin-top: 10vh;
+  text-align: center;
+  color: $textcol;
+  span {
+    color: $prmary;
+    cursor: pointer;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
+
 @media (max-width: 800px) {
+  .container {
+    padding: 0;
+  }
   svg {
     display: none;
   }
@@ -121,7 +205,8 @@ body {
       margin: 30% auto 0;
     }
     .line-chart {
-      margin: 10% auto;
+      margin: 10vh auto 10px;
+      width: 100vw;
       img {
         padding: 0;
       }
@@ -139,77 +224,11 @@ body {
       display: none;
     }
   }
-}
-// log in
 
-.auth-side {
-  background-image: url(/assets/img/bitmap.png);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  min-height: 100vh;
-  max-height: auto;
-  box-shadow: inset 0 0 0 2000px #2f3b52e1;
-  // width: 100%;
-  margin: 0 -15px;
-}
-
-.auth-logo {
-  width: 25%;
-  height: 100px;
-  margin: 10% auto 5%;
-}
-
-.wrapper {
-  .title {
-    font-size: 25px;
-    font-weight: 400;
-    color: $textcol;
-    text-align: center;
-  }
-}
-
-.form {
-  display: flex;
-  justify-content: center;
-  margin: 30px;
-  flex-wrap: wrap;
-  label {
-    font-size: 12px;
-    font-weight: 500;
-  }
-  input {
-    width: 320px;
-    height: 30px;
-    border-radius: 3px;
-    background-color: $textcol;
-    caret-color: #1f8efa;
-    color: white !important;
-    &:focus {
-      background-color: $textcol;
-      box-shadow: none;
-    }
-  }
-}
-.forgot {
-  p {
-    cursor: pointer;
-    margin: 20px 30px 0;
-    color: $bg;
-    &:hover {
-      color: $prmary;
-    }
-  }
-}
-.signup {
-  margin-top: 100px;
-  text-align: center;
-  color: $textcol;
-  span {
-    color: $prmary;
-    cursor: pointer;
-    &:hover {
-      text-decoration: underline;
+  .forgot {
+    margin: auto 0 !important;
+    p {
+      margin: 4vh 0 !important;
     }
   }
 }
