--- a/etp/src/app/pages/home/home.component.html
+++ b/etp/src/app/pages/home/home.component.html
@@ -27,21 +27,25 @@
         <sub>K W H</sub></span
       >
       <a href="/auth/signin" routerLink="/auth/signin"
-        ><button mat-raised-button class="btn" type="button">SIGN IN</button></a
+        ><button mat-raised-button class="btn" type="button" i18n>
+          SIGN IN
+        </button></a
       >
       <a href="/auth/signup" routerLink="/auth/signup">
-        <button mat-raised-button class="btn" type="button">SIGN UP</button></a
+        <button mat-raised-button class="btn" type="button" i18n>
+          SIGN UP
+        </button></a
       >
     </div>
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-6 col-md-6">
           <div class="heading">
-            <h1 class="title">
+            <h1 class="title" i18n>
               Welcome to <br />
               Energy Trading Platform
             </h1>
-            <p>by solar bankers</p>
+            <p i18n>by solar bankers</p>
             <div style="width: 20vh; margin: 5px -5% 0;">
               <img
                 src="assets/img/logo.png"
