--- a/etp/src/app/auth/authhome/authhome.component.html
+++ b/etp/src/app/auth/authhome/authhome.component.html
@@ -13,7 +13,7 @@
       </div>
     </div>
   </div>
-  <div class="col-lg-5 col-md-7">
+  <div class="col-lg-5 col-md-7 m-auto">
     <div class="container">
       <div class="auth-logo">
         <a href="" routerLink="">
