--- a/etp/src/app/auth/signin/signin.component.scss
+++ b/etp/src/app/auth/signin/signin.component.scss
@@ -7,5 +7,17 @@ p {
 }
 
 span {
-  font-size: 2vh;
+  font-size: 2.2vh;
+  font-weight: 500;
+  &:hover {
+    transition: ease-in-out 0.2s;
+    font-size: 2.5vh;
+  }
+}
+.info {
+  color: #888;
+  margin: 5vh;
+  font-size: 2.2vh;
+  line-height: 1.5;
+  font-weight: 400;
 }
