--- a/etp/src/app/pages/home/home.component.html
+++ b/etp/src/app/pages/home/home.component.html
@@ -67,7 +67,7 @@
           *ngIf="(set.isHandset$ | async) || (set.isTablet$ | async)"
         >
           <img
-            style="margin: 0 1vw;"
+            style="margin: 0 10px; width: 90%;"
             src="/assets/img/combine.png"
             alt="charts"
             class="img-fluid"
@@ -86,7 +86,7 @@
                 class="img-fluid"
               />
             </div>
-            <div style="width: 40vw;">
+            <div>
               <img
                 src="/assets/img/active-hours.png"
                 alt="consumption by day"
