--- a/etp/src/styles.scss
+++ b/etp/src/styles.scss
@@ -24,6 +24,45 @@ $etp-theme: mat-light-theme($etp-primary, $etp-accent, $etp-warn);
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include angular-material-theme($etp-theme);
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@import "~@angular/material/theming";
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat-core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$etp-primary: mat-palette($mat-indigo);
+$etp-accent: mat-palette($mat-pink, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$etp-warn: mat-palette($mat-red);
+
+// Create the theme object (a Sass map containing all of the palettes).
+$etp-theme: mat-light-theme($etp-primary, $etp-accent, $etp-warn);
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+
+@include angular-material-theme($etp-theme);
+$enable-grid-classes: false;
+$primary: #1f8efa;
+$secondary: #657d95;
+$success: #28a745;
+$danger: #dc3545;
+$info: #17a2b8;
+$warning: #ffc107;
+$light: #f8f9fa;
+$dark: #343a40;
+@import "bootstrap";
+
 $prmary: #1f8efa;
 $bg: #2f3b52;
 $big-bg: linear-gradient(90deg, #0c1425 100%, #242e42 0%);
@@ -39,6 +78,9 @@ html,
 body {
   height: 100%;
 }
+li {
+  list-style: none;
+}
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
@@ -46,10 +88,11 @@ body {
 .btn {
   background-color: $prmary !important;
   border-radius: 2px !important;
-  font-size: 1.6vh !important;
+  font-size: 2vh !important;
   font-weight: 300 !important;
   color: white !important;
   line-height: 5px !important;
+  letter-spacing: 1.2px;
 }
 // home styling
 .home-wrapper {
@@ -62,10 +105,10 @@ body {
     margin-top: 10vh;
     padding: 20px 0;
     .title {
-      font-size: 5vh;
+      font-size: 5.6vh;
       font-weight: 400;
       line-height: 1;
-      margin-top: 5%;
+      margin-top: 3%;
       text-shadow: 4px 4px 0px #0c1425, 7px 7px 0px rgba(0, 0, 0, 0.84);
     }
     p {
@@ -98,9 +141,9 @@ body {
       }
     }
     .btn {
-      height: 3.5vh;
-      width: 10vw;
-      padding: 5px 0px;
+      height: 4vh;
+      width: 20vh;
+      padding: 5px 10px;
       margin: auto 5px;
     }
   }
@@ -174,6 +217,8 @@ body {
     cursor: pointer;
     margin: 5vh 0 0;
     color: $bg;
+    line-height: 1.2;
+    font-size: 2vh !important;
     &:hover {
       color: $prmary;
     }
@@ -205,8 +250,8 @@ body {
       margin: 30% auto 0;
     }
     .line-chart {
-      margin: 10vh auto 10px;
-      width: 90vw;
+      margin: 20px 20px;
+      width: 85%;
       img {
         padding: 0;
       }
@@ -231,4 +276,13 @@ body {
       margin: 4vh 0 !important;
     }
   }
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
